# DigiMicPy

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/content/: advanced_usage.md  coalescence.md  contact.md  contributors.md  cue.md  details.ipynb  glv.md  glv_stability.md  intro.md  resource_flux.md  support.md  theo.ipynb  useinfo.ipynb
content/: advanced_usage.html  analysis.html  analysisinfo.html  coalescence.html  contact.html  contributors.html  cue.html  details.html  funding.html  glv.html  glv_stability.html  intro.html  micrm_stability.html  resource_flux.html  support.html  temperature.html  theo.html  useinfo.html
docs/: _config.yml  _toc.yml  references.bib
docs/content/: analysis.md  analysisinfo.ipynb  coalescence.md  cue.md  funding.md  glv.md  intro.md  micrm_stability.md  resource_flux.md  support.md  temperature.md  theo.ipynb  useinfo.ipynb
src/: micrm.py
