[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "DigiMicPy"
version = "0.1.0"
authors = [{name="Yan Zhu", email="yan.zhu@imperial.ac.uk"}]
description = "DigiMicPy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/EcoEngLab/DigiMicPy"
Documentation = "https://ecoenglab.github.io/DigiMicPy"

[tool.setuptools.packages.find]
where = ["src"]